--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
+
+<header>
+    <nav>
+        <ul>
+            <li>
+                Acceuil
+            </li>
+            <li>
+                Intro
+            </li>
+            <li>
+                Portfolio
+            </li>
+            <li>
+                Projets
+            </li>
+            <li>
+                Contact
+            </li>
+        </ul>
+    </nav>
+</header>
+<main></main>
+<footer></footer>
     
 </body>
 </html>
