--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,19 @@
 <body>
 
 <header>
-    <nav>
-        <ul>
-            <li>
-                Acceuil
-            </li>
-            <li>
-                Intro
-            </li>
-            <li>
-                Portfolio
-            </li>
-            <li>
-                Projets
-            </li>
-            <li>
-                Contact
-            </li>
-        </ul>
+    <div class="header--logo"><img src="./assets/images/0.jpg" alt="logo--portfolio"></div>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="burger--icon">
+            <span>&#9776;</span>
+        </div>
     </nav>
 </header>
-<main></main>
+<main>
+    <div class="container">
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6"></div>
+    </div>
+</main>
 <footer></footer>
     
 </body>
